--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <h1>I can push to git hub</h1>
-    <h2></h2>
-    <h3></h3>
+    <h2>added another line</h2>
+    <h3>smaller line</h3>
 </body>
 
 </html>
