adding more lines

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>I can push to git hub</h1>
     <h2>added another line</h2>
     <h3>smaller line</h3>
+    <p>kichu line </p>
 </body>
 
 </html>
